#1514 Poder recuperar el CSV d'alta massiva de les accions massives

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -22,6 +22,8 @@ expedient.consulta.netejar=Netejar
 expedient.consulta.cons_general=Consulta general
 expedient.consulta.cons_disseny=Consultes de disseny
 expedient.consulta.consulta=Consulta
+expedient.consulta.recuperarCSV=CSV original
+expedient.consulta.recuperarResultatCSV=Resultat
 expedient.consulta.iniciat=Iniciat
 expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
