--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -255,6 +255,9 @@ expedient.alta.massiva.no.trobada=No s'ha trobat cap alta massiva per aquest tip
 expedient.alta.massiva.exemple.success=Arxiu CSV d'exemple descarregat correctament.
 expedient.alta.massiva.exemple.error=Error descarregant l'arxiu CSV d'exemple: {0}
 
+expedient.alta.massiva.csvoriginal.success=Arxiu CSV original descarregat correctament.
+expedient.alta.massiva.csvoriginal.error=Error descarregant l'arxiu CSV original: {0}
+
 expedient.alta.massiva.processar=Executar procés
 expedient.alta.massiva.resultats=Resultats
 expedient.alta.massiva.resultats.error.darrera.execucio=No hi ha cap darrera execució per descarregar resultats
@@ -394,6 +397,7 @@ expedient.document.notificar.form.camp.entregaPostalCie=Cie
 expedient.document.notificar.form.camp.entregaPostalFormatSobre=Format sobre
 expedient.document.notificar.form.camp.entregaPostalFormatFulla=Format fulla
 
+expedient.document.descarregar=Descarregar document
 expedient.document.descarregar.zip=Descarregar la documentació com un arxiu comprimit .zip
 expedient.document.descarregar.zip.error=S''ha produït un error generant i descarregant el .zip amb la documentació: {0}
 expedient.document.filtrar=Filtrar documents
