#1574 Ordenar els entorns en la selecció d'entorns i facilitar la cerca

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2254,6 +2254,7 @@ perfil.usuari.nota.cabecera=Mida i format de capçalera.
 perfil.usuari.cabecera=Capçalera
 perfil.usuari.nota.entorn=Entorn per defecte que s'ha d'obrir.
 perfil.usuari.entorn=Entorn
+perfil.usuari.filtrar=Filtrar entorns
 perfil.usuari.elements.page=Elements per pàgina
 perfil.usuari.tipus.expedient=Tipus d'expedient
 perfil.usuari.consulta.tipus=Consulta
