#1575 Ampliar l'esborrat del tipus d'expedient als expedients

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -741,7 +741,7 @@ expedient.tipus.llistat.accio.permisos=Permisos
 expedient.tipus.llistat.accio.nou=Nou tipus d'expedient
 expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
-expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient i tots els expedients dependents? Aquesta acció no es pot tornar enrera una vegada executada.
 
 expedient.tipus.ambInfoPropia.avis=Atenció! El tipus d''expedient no està configurat per utilitzar la informació pròpia. Modifiqueu el tipus d''expedient i marqueu la opció \"{0}\" si voleu utilitzar aquestes dades en comptes de les de la definició de procés.
 
@@ -969,6 +969,9 @@ expedient.tipus.controller.creat=El tipus d'expedient s'ha creat correctament
 expedient.tipus.controller.modificat=El tipus d'expedient s'ha modificat correctament
 expedient.tipus.controller.eliminat=El tipus d'expedient s'ha elimitat correctament
 expedient.tipus.controller.eliminar.expedients.relacionats=Hi ha expedients iniciats amb aquest tipus
+expedient.tipus.controller.eliminar.expedients.noTePermisEsborrar=L'usuari no té el permís per esborrar els expedients dependents del tipus d'expedient
+expedient.tipus.controller.expedients.eliminats=S''han esborrat correctament {0} de {1} expedients pel tipus d''expedient
+expedient.tipus.controller.expedients.eliminats.errors=No s''han pogut esborrar correctament {0} de {1} expedients pel tipus d''expedient
 expedient.tipus.controller.eliminar.tipus.heretats=No es pot esborrar el tipus d''expedient perquè hi ha {0} tipus d''expedient que hereten directament
 expedient.tipus.controller.eliminar.tipus.heretat=El tipus d''expedient "{0} - {1}" hereta d'aquest tipus d'expedient.
 expedient.tipus.controller.permis.actualitzat=S'ha actualitzat el permis per al tipus d'expedient
