#1575 Ampliar l'esborrat del tipus d'expedient als expedients

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -741,7 +741,8 @@ expedient.tipus.llistat.accio.permisos=Permisos
 expedient.tipus.llistat.accio.nou=Nou tipus d'expedient
 expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
-expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient i tots els expedients dependents? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.tipus.llistat.confirmacio.esborrar.esborrarExpedients=Estau segur que voleu esborrar aquest tipus d'expedient i tots els expedients dependents? Aquesta acció no es pot tornar enrera una vegada executada.
 
 expedient.tipus.ambInfoPropia.avis=Atenció! El tipus d''expedient no està configurat per utilitzar la informació pròpia. Modifiqueu el tipus d''expedient i marqueu la opció \"{0}\" si voleu utilitzar aquestes dades en comptes de les de la definició de procés.
 
@@ -2276,6 +2277,8 @@ configuracio.parametres.redireccionar.info=Si s'habilita es redigirà a l'usuari 
 configuracio.parametres.accio.restaurar=Restaurar
 configuracio.parametres.accio.restaurar.confirmacio=Valors per defecte restaurats correctament
 configuracio.parametres.accio.guardar.confirmacio=Valors guardats correctament
+configuracio.parametres.propagarEsborratExpedients=Propagar esborrat d'expedients
+configuracio.parametres.propagarEsborratExpedients.info=Si s'habilita es permetrà la propagació de l'esborrat d'expedients quan s'esborri un tipus d'expedient
 
 metriques.timers.llegenda=Llegenda:
 metriques.timers.pes=Pes: Nombre d'execucions x Temps mig d'una execució (ms)
