#1582 Evitar accés disseny antic i treure la opció del menú de disseny

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1019,6 +1019,8 @@ decorators.entorn.despl_arxiu=Desplegar arxiu
 decorators.entorn.defs_proces=Definicions de procés
 decorators.entorn.enumeracions=Enumeracions
 decorators.entorn.dominis=Dominis
+decorators.entorn.disseny.antic=Disseny antic
+decorators.entorn.disseny.antic.info=Només poden accedir al disseny antic usuaris amb el rol HEL_ADMIN
 decorators.entorn.alert_no_llegides=Hi ha alertes sense llegir
 decorators.entorn.alert_activa=Hi ha alertes actives
 
