#1593 Assenyalar documents amb firma invàlida provinents de Distribucio

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -400,6 +400,8 @@ expedient.document.ordenar.default=Per codi i títol d'annex
 expedient.document.ordenar.data=Per data
 expedient.document.ordenar.titol=Per títol
 
+expedient.document.invalid=Aquest annex està marcat com a invàlid: {0}
+
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament. A la data de caducitat se li sumaran els dies definits dins del NOTIB pel procediment
 notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
@@ -721,6 +723,8 @@ expedient.anotacio.llistat.columna.extracte=Extracte
 expedient.anotacio.llistat.columna.estat=Estat
 expedient.anotacio.llistat.columna.dataProcessament=Processada
 expedient.anotacio.llistat.error.annexos=L'anotació conté error amb alguns annexos que poden no haver esat incorporats a l'arxiu.
+expedient.anotacio.llistat.annexos.invalids=L'anotació conté annexos marcats com a invàlids que s'haurien de revisar.
+expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat d'esborrany que es podrien perdre si es tanca l'expedient a l'Arxiu.
 
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
 expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
@@ -2045,6 +2049,9 @@ anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 anotacio.annex.detalls.camp.fitxer=Fitxer
 anotacio.annex.detalls.camp.fitxer.descarregar=Descarregar fitxer
 anotacio.annex.detalls.camp.estat=Estat
+anotacio.annex.detalls.camp.estat.arxiu=Estat a l'Arxiu
+anotacio.annex.detalls.camp.estat.arxiu.esborrany.avis=Aquest annex s'ha distribuït amb estat d'esborrany per poder-se distribuir i podria perdre's si no es firma abans de tancar l'expedient a l'Arxiu.
+anotacio.annex.detalls.camp.valid=Vàlid
 anotacio.annex.detalls.camp.ntiTipusDocument.RESOLUCIO=Resolució
 anotacio.annex.detalls.camp.ntiTipusDocument.ACORD=Acord
 anotacio.annex.detalls.camp.ntiTipusDocument.CONTRACTE=Contracte
@@ -2106,7 +2113,9 @@ anotacio.annex.detalls.camp.firmaDetalls.nif=NIF
 anotacio.annex.detalls.camp.firmaDetalls.nom=Nom
 anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 
-anotacio.annex.detalls.annex.error=Aquest annext conté un error: {0}
+anotacio.annex.detalls.annex.error=Aquest annex conté un error: {0}
+anotacio.annex.detalls.annex.invalid=Aquest annex està marcat com a invàlid: {0}
+anotacio.annex.detalls.annex.esborrany=Aquest annex està en estat d'esborrany
 anotacio.annex.detalls.annex.processament.error=El processament d'aquest annex ha produit error
 anotacio.annex.detalls.annex.accio.reintentar=Reintentar processament
 anotacio.annex.detalls.annex.firmes.consultant=Validant les firmes del document...
