Tancament i correccions Helium 3.2.114.5 (2022.07.19 17:00)
- Afegir l'estat a l'Arxiu al detall del document

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -518,6 +518,7 @@ expedient.metadades.nti.grup.contingut=Contingut del document
 expedient.metadades.nti.grup.firma=Firma
 expedient.metadades.nti.camp.identificador=Identificador arxiu
 expedient.metadades.nti.camp.nom=Nom
+expedient.metadades.nti.camp.arxiuEstat=Estat a l'Arxiu
 expedient.metadades.nti.camp.aplicacio=Aplicació
 expedient.metadades.nti.camp.serie.doc=Sèrie documental
 expedient.metadades.nti.camp.eni.versio=Versió
