#1578 Permetre crear regles de Distribució des d'un procediment d'Helium directament

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1495,6 +1495,11 @@ expedient.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correc
 expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
 expedient.tipus.metadades.nti.validacio = Errors de validació
 
+expedient.tipus.integracio.distribucio.validacio = Errors de validació
+expedient.tipus.integracio.distribucio.regla.guardat=La regla s'ha creat correctament
+expedient.tipus.integracio.distribucio.regla.error=Error al crear la regla en distribució
+expedient.tipus.integracio.distribucio.regla.unitatOrganica.error=No s'ha trobat la unitat orgànica arrel a les metadades NTI d'aquest tipus d'expedient
+
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.tramits.validacio = Errors de validació
 
@@ -2203,6 +2208,7 @@ comu.filtre.desplegar=Desplegar
 comu.boto.accions=Accions
 comu.boto.eines=Eines
 comu.boto.guardar=Guardar
+comu.boto.crearRegla=Crear Regla
 comu.boto.cancelar=Cancel·lar
 comu.boto.rependre=Rependre
 comu.boto.generar=Generar
