#1598 Revisar codis invàlids per variables definides

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -51,6 +51,8 @@ error.camp.codi.buit=El camp codi no pot estar buit
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.codi.char.espai=El codi no pot contenir espais en blanc
+error.camp.codi.char.caracters.nomespodencontenir=Els codis de variables només poden contenir caràcters sense accentuació que siguin majúscula, minúscula, número o guió baix.
+error.camp.codi.char.mayguionum=Els codis de variables no poden començar per majúscula seguida de minúscula, guió baix o número.
 error.camp.enumdomcons.buit=s'ha d'especificar una enumeració, un domini o una consulta
 error.camp.enumdomcons.tots=Només s'ha d'especificar un domini, una enumeració o una consulta
 error.camp.domini=Seleccioni un o altre
