#1595 Tractar els avisos de noves anotacions de Distribucio en una cua

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1958,8 +1958,20 @@ anotacio.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta pet
 anotacio.llistat.accio.esborrar.validacio.pendent=Només es poden esborrar anotacions pendents
 anotacio.llistat.accio.esborrar.success=La petició d''anotació de registre "{0}" ha estat esborrada correctament
 anotacio.llistat.accio.esborrar.error=Error esborrant l''anotació amb id {0}: {1}
+anotacio.llistat.accio.reprocessar=Reprocessar
+anotacio.llistat.accio.reprocessar.success=La petició d''anotació de registre "{0}" s'ha reprocessat correctament
+anotacio.llistat.accio.reprocessar.error=Error reprocessant l''anotació amb id {0}: {1}
+anotacio.llistat.accio.marcarPendent=Marcar pendent
+anotacio.llistat.accio.marcarPendent.success=L''anotació de registre "{0}" s'ha marcat com a pendent correctament
+anotacio.llistat.accio.marcarPendent.error=Error marcant com a pendent l''anotació amb id {0}: {1}
+anotacio.llistat.accio.reintentarConsulta=Reintentar
+anotacio.llistat.accio.reintentarConsulta.success=S'ha fixat el número d''intents a 0 a l''anotació de registre "{0}" correctament
+anotacio.llistat.accio.reintentarConsulta.error=Error fixant el número d''intents a 0 per  l''anotació amb id {0}: {1}
+
 
 anotacio.detalls.titol=Detalls de l''anotació de registre {0}
+anotacio.detalls.errorProcessament=Error en el processament de l''anotació: {0} 
+anotacio.detalls.consulta=L''anotació està pendent de ser consultada abans de poder-se processar. Intent {0} de {1}
 anotacio.detalls.pipella.informacio=Informació
 anotacio.detalls.pipella.interessats=Interessats
 anotacio.detalls.pipella.annexos=Annexos
@@ -1973,6 +1985,7 @@ anotacio.detalls.camp.tipus=Tipus
 anotacio.detalls.entrada=Entrada
 anotacio.detalls.camp.numero=Número
 anotacio.detalls.camp.data=Data
+anotacio.detalls.camp.estat=Estat
 anotacio.detalls.camp.entitat=Entitat
 anotacio.detalls.camp.oficina=Oficina
 anotacio.detalls.camp.llibre=Llibre
@@ -2183,6 +2196,8 @@ anotacio.form.rebutjar.accio.rebutjar.error=Hi ha hagut un error rebutjant l''an
 enum.anotacio.estat.PENDENT=Pendent
 enum.anotacio.estat.PROCESSADA=Processada
 enum.anotacio.estat.REBUTJADA=Rebutjada
+enum.anotacio.estat.COMUNICADA=Comunicada
+enum.anotacio.estat.ERROR_PROCESSANT=Error processant
 
 enum.anotacio.accio.GUARDAR=Guardar
 enum.anotacio.accio.CREAR=Crear
