#1600 Posar Sistra 1 en la pipella d'integració amb tràmits telemàtics

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1451,7 +1451,8 @@ expedient.tipus.integracio.tramits.mapeig.adjunts=Mapeig de documents com adjunt
 expedient.tipus.integracio.tramits.variables=Variables
 expedient.tipus.integracio.tramits.documents=Documents
 expedient.tipus.integracio.tramits.adjunts=Adunts
-expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
+expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit (SISTRA1)
+expedient.tipus.integracio.tramits.tramitCodi.validacio.NotEmpty=És obligatori especificar el codi del tràmit SISTRA1 si el tipus d'expedien no està integrat amb DISTRIBUCIO i no està integrat amb SISTRA2.
 expedient.tipus.integracio.tramits.notificacions.activar=Activar notificacions
 
 expedient.tipus.integracio.distribucio.controller.guardat=Els canvis s'han guardat correctament
