--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -762,6 +762,7 @@ expedient.tipus.pipelles.pipella.terminis=Terminis
 expedient.tipus.pipelles.pipella.accions=Accions
 expedient.tipus.pipelles.pipella.dominis=Dominis
 expedient.tipus.pipelles.pipella.redireccions=Redireccions
+expedient.tipus.pipelles.pipella.integracio.pinbal=Integració PINBAL
 expedient.tipus.pipelles.pipella.consultes=Consultes
 expedient.tipus.pipelles.pipella.enumeracions=Enumeracions
 expedient.tipus.pipelles.pipella.integracio.sistra=Integració SISTRA
@@ -1501,6 +1502,11 @@ expedient.tipus.metadades.nti.serie.documental=Sèrie documental
 expedient.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
 expedient.tipus.metadades.nti.validacio = Errors de validació
+
+expedient.tipus.integracio.pinbal.validacio = Errors de validació
+expedient.tipus.integracio.pinbal.controller.guardat=Els canvis s'han guardat correctament
+expedient.tipus.intergracio.pinbal.actiu = Activar integració amb Pinbal
+expedient.tipus.integracio.pinbal.pinbalNifCif = NIF/CIF de la Unitat Organitzativa
 
 expedient.tipus.integracio.distribucio.validacio = Errors de validació
 expedient.tipus.integracio.distribucio.regla.guardat=La regla s'ha creat correctament
