--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1510,7 +1510,7 @@ expedient.tipus.integracio.pinbal.pinbalNifCif = NIF/CIF de la Unitat Organitzat
 
 expedient.tipus.integracio.distribucio.validacio = Errors de validació
 expedient.tipus.integracio.distribucio.regla.guardat=La regla s'ha creat correctament
-expedient.tipus.integracio.distribucio.regla.error=Error al crear la regla en distribució
+expedient.tipus.integracio.distribucio.regla.error=Error al crear la regla a Distribucio: {0}
 expedient.tipus.integracio.distribucio.regla.unitatOrganica.error=No s'ha trobat la unitat orgànica arrel a les metadades NTI d'aquest tipus d'expedient
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
