--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -884,9 +884,10 @@ expedient.tipus.exportar.form.camp.ambRetroaccio=Amb retroacció
 expedient.tipus.exportar.form.camp.reindexacioAsincrona=Reindexació asíncrona
 
 expedient.tipus.estadistica.titol = Estadística per tipus d'expedient
-expedient.tipus.cercador.tipologies.titol = Cercador de tipus d'expedient per tipologia
+expedient.tipus.cercador.tipologies.titol = Cercador de tipus d'expedient
 
-expedient.tipus.cercador.tipologies.codi.tipologia = Codi tipologia
+expedient.tipus.cercador.tipologies.codi.tipologia = Codi tipus
+expedient.tipus.cercador.tipologies.nom.tipologia = Nom tipus
 expedient.tipus.cercador.tipologies.tipus.expedient.titol = Tipus d'expedient
 expedient.tipus.cercador.tipologies.codi.sia = Codia SIA del procediment
 expedient.tipus.cercador.tipologies.numero.registre.anotacio = Número de registre d'anotació
