--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -15,7 +15,7 @@ decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.reindexacions=Reindexacions asíncrones
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
-decorator.menu.administracio.cercador.tipologies=Cercador de tipologies
+decorator.menu.administracio.cercador.tipologies=Cercador de tipus d'expedients
 decorator.logo.govern=Govern de les Illes Balears
 decorator.logo.manera=Una manera de hacer Europa
 decorator.logo.feder=Fondo Europeo de Desarrollo Regional 
@@ -891,6 +891,7 @@ expedient.tipus.cercador.tipologies.nom.tipologia = Nom tipus
 expedient.tipus.cercador.tipologies.tipus.expedient.titol = Tipus d'expedient
 expedient.tipus.cercador.tipologies.codi.sia = Codia SIA del procediment
 expedient.tipus.cercador.tipologies.numero.registre.anotacio = Número de registre d'anotació
+expedient.tipus.cercador.tipologies.entorn = Entorn
 
 expedient.tipus.taula.estadistica.totalany = Total per any
 expedient.tipus.taula.estadistica.totaltipus = Total tipus
