Proves i correccions Helium 3.2.115 -#1601 Cercador de tipologies per administradors

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -891,7 +891,7 @@ expedient.tipus.cercador.tipologies.codi.tipologia = Codi tipus
 expedient.tipus.cercador.tipologies.nom.tipologia = Nom tipus
 expedient.tipus.cercador.tipologies.tipus.expedient.titol = Tipus d'expedient
 expedient.tipus.cercador.tipologies.codi.sia = Codia SIA del procediment
-expedient.tipus.cercador.tipologies.numero.registre.anotacio = Número de registre d'anotació
+expedient.tipus.cercador.tipologies.numero.registre.anotacio = Número de registre
 expedient.tipus.cercador.tipologies.entorn = Entorn
 
 expedient.tipus.taula.estadistica.totalany = Total per any
