#1610 Afegir botó de logout

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1606,6 +1606,8 @@ login.autenticacio=Autenticació
 login.usuari=Usuari
 login.contrasenya=Contrasenya
 login.entrar=Entrar
+login.desconnectar=Desconnectar
+
 
 logerror.autenticacio=Autenticació
 logerror.incorrectes=Usuari o contrasenya incorrectes
