#1613 Tenir en compte el check "Activar tràmits" per a la creació d'expedients a partir dels tràmits de Sistra1

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1525,6 +1525,8 @@ expedient.tipus.integracio.distribucio.regla.unitatOrganica.error=No s'ha trobat
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.tramits.validacio = Errors de validació
+expedient.tipus.integracio.tramits.validacio.no.desactivar= No es pot desactivar si la integració amb Sistra2 està activa en la configuració amb Distribució
+expedient.tipus.integracio.tramits.validacio.no.activar= No es pot activar la integració amb Sistra2 si no està activada la integració amb Sistra
 
 expedient.tipus.integracio.tramits.mapeig.llistat.titol.Variable=Mapeig de variables
 expedient.tipus.integracio.tramits.mapeig.llistat.titol.Document=Mapeig de documents
