#1627 Helium sense WF. Adequar les propietats pel tipus d'expedients i modificacions de funcionament intern

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -744,6 +744,7 @@ expedient.lucene.error.varis=S''han trobat {0} resultats per l''identificador d'
 expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
 expedient.tipus.llistat.columna.titol=Títol
+expedient.tipus.llistat.columna.tipus=Tipus
 expedient.tipus.llistat.accio.permisos=Permisos
 expedient.tipus.llistat.accio.nou=Nou tipus d'expedient
 expedient.tipus.llistat.accio.dissenyar=Dissenyar
@@ -775,6 +776,7 @@ expedient.tipus.pipelles.pipella.integracio.notib=Integració amb NOTIB
 
 expedient.tipus.info.camp.codi=Codi
 expedient.tipus.info.camp.titol=Títol
+expedient.tipus.info.camp.tipus=Tipus
 expedient.tipus.info.camp.ambInfoPropia=Amb informació pròpia
 expedient.tipus.info.camp.ambInfoPropia.expedientTipusPare=Hereta del tipus d''expedient "{0} - {1}"
 expedient.tipus.info.camp.ambInfoPropia.heretable=heretable
@@ -805,6 +807,7 @@ expedient.tipus.form.titol.nou=Crear nou tipus d'expedient
 expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
 expedient.tipus.form.camp.titol=Títol
+expedient.tipus.form.camp.tipus=Tipus
 expedient.tipus.form.camp.ambInfoPropia=Amb informació pròpia
 expedient.tipus.form.camp.ambInfoPropia.nota=Si es marca aquesta opció les dades que es prendran seran les del tipus d'expedient. En cas contrari les dades seran les de la versió de la definició de procés.
 expedient.tipus.form.camp.heretable=Heretable
@@ -899,6 +902,9 @@ expedient.tipus.taula.estadistica.totaltipus = Total tipus
 expedient.tipus.taula.estadistica.titol.nom = Tipus d'expedient
 expedient.tipus.taula.estadistica.titol.codi = Codi
 expedient.tipus.taula.estadistica.warning.senseresultats=No s'han trobat resultats
+
+expedient.tipus.tipus.enum.FLOW=Per flux
+expedient.tipus.tipus.enum.ESTAT= Per estats
 
 # Literals comuns per a la importació i exportació de tipus d'expedients i definicions de processos
 exportar.validacio=Errors de validació
