#1627 Helium sense WF. Adequar propietats tipus expedient i funcionament intern
- Desplegar par senzill
- Associar en la creació i modificació

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -987,6 +987,15 @@ expedient.tipus.validacio.expedientTipusPare.sense.info.propia=El tipus d'expedi
 expedient.tipus.validacio.seq.any=El format de l''any està buit o és incorrecte
 expedient.tipus.validacio.seq.any.repetit=Hi ha anys repetits en la taula de seqüències
 expedient.tipus.validacio.seq.valor=El format de la seqüència està buit o és incorrecte
+expedient.tipus.validacio.ambInfoPropia=Si el tipus d'expedient està definit per estats llavors ha de tenir informació pròpia
+expedient.tipus.validacio.heretable=Si el tipus d'expedient està definit per estats llavors no pot ser heretable
+expedient.tipus.validacio.expedientTipusPareId=Si el tipus d'expedient està definit per estats no pot heretar
+expedient.tipus.validacio.ambRetroaccio=Si el tipus d'expedient està definit per estats llavors no tindrà retroacció
+expedient.tipus.validacio.reindexacioAsincrona=Si el tipus d'expedient està definit per estats llavors no es pot reindexar asíncronament
+
+
+
+
 
 expedient.tipus.controller.creat=El tipus d'expedient s'ha creat correctament
 expedient.tipus.controller.modificat=El tipus d'expedient s'ha modificat correctament
