#1627 Helium sense WF  - Regles

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -843,6 +843,36 @@ expedient.tipus.permis.form.titol.modificar=Modificar permis
 expedient.tipus.permis.form.camp.tipus=Tipus
 expedient.tipus.permis.form.camp.principal=Principal
 
+expedient.tipus.regla.titol=Regles de l'estat
+expedient.tipus.regla.accio.nou=Nova regla
+expedient.tipus.regla.form.camp.nom=Nom
+expedient.tipus.regla.form.camp.qui=Qui
+expedient.tipus.regla.form.camp.qui.valors=Valors qui
+expedient.tipus.regla.form.camp.que=Que
+expedient.tipus.regla.form.camp.que.valors=Valors que
+expedient.tipus.regla.form.camp.accio=Acció
+
+expedient.tipus.regla.form.titol.nou=Nova regla
+expedient.tipus.regla.form.titol.modificar=Modificar regla
+expedient.tipus.estat.controller.regla.creat=Regla creada
+expedient.tipus.estat.controller.regla.modificat=Regla modificada
+
+enum.regla.qui.TOTHOM=Tothom
+enum.regla.qui.ROL=Rol
+enum.regla.qui.USUARI=Usuari
+enum.regla.que.TOT=Tot
+enum.regla.que.DADES=Dades
+enum.regla.que.DOCUMENTS=Documents
+enum.regla.que.AGRUPACIO=Agrupacio
+enum.regla.que.DADA=Dada
+enum.regla.que.DOCUMENT=Document
+enum.regla.que.TERMINI=Termini
+enum.regla.accio.MOSTRAR=Mostrar
+enum.regla.accio.OCULTAR=Ocultar
+enum.regla.accio.EDITAR=Editar
+enum.regla.accio.BLOQUEJAR=Bloquejar
+enum.regla.accio.REQUERIR=Obligatori
+
 expedient.tipus.exportar.form.titol=Exportació del tipus d'expedient
 expedient.tipus.exportar.form.estats=Estats
 expedient.tipus.exportar.form.variables=Variables
@@ -1433,11 +1463,17 @@ expedient.tipus.estat.controller.modificat=Estat modificat correctament
 expedient.tipus.estat.controller.eliminat=Estat esborrat correctament
 expedient.tipus.estat.controller.eliminat.no=No s''ha pogut esborrar l''estat: {0}
 expedient.tipus.estat.controller.moure.heretat.error=No es pot modificar l'ordre d'un estat heretat
+expedient.tipus.estat.controller.permis.actualitzat=Permís modificat correctament
 expedient.tipus.estat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest estat?
 expedient.tipus.estat.llistat.codi.heretat=Estat heretat del tipus d'expedient pare
 expedient.tipus.estat.llistat.codi.sobreescriu=Estat que sobreescriu un del tipus d'expedient pare
+expedient.tipus.estat.llistat.accio.permisos=Permisos
+expedient.tipus.estat.llistat.accio.regles=Regles
+
+expedient.tipus.estat.permis.titol=Permisos de l'estat
 
 expedient.tipus.estat.validacio.codi.repetit=Aquest codi ja existeix
+expedient.tipus.estat.validacio.ordre.buit=L'ordre no pot estar buit ni ser menor que 1
 
 expedient.tipus.estat.importar.form.titol=Importar dades d'estats
 expedient.tipus.estat.importar.form.titol.modificar=Modificar estat
@@ -1449,7 +1485,7 @@ expedient.tipus.estat.importar.controller.error=Error durant la importació de da
 expedient.tipus.estat.importar.controller.error.codi=No s''ha pogut importar l''estat "{0}". El codi no pot començar per majúscula i minúscula ni contenir espais o punts.
 
 expedient.tipus.estat.exportar.controller.success=Exportació finalitzada correctament
-expedient.tipus.estat.importar.controller.error=Error durant la exportació de dades: {0}
+expedient.tipus.estat.exportar.controller.error=Error durant la exportació de dades: {0}
 
 expedient.tipus.integracio.forms.activar=Activar
 expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis externs
@@ -2372,6 +2408,11 @@ permis.DESIGN=Disseny
 permis.SUPERVISION=Supervisió
 permis.MANAGE=Gestió
 permis.REASSIGNMENT=Reassignació
+
+permis.estat.READ.info=Permet a l'usuari tramitador consultar la informació dels expedients com la informació bàsica, les dades, documents i terminis.
+permis.estat.WRITE.info=Permet a l'usuari tramitador modificar la informació de l'expedient dins de la gestió de l'expedient.
+permis.estat.DATA_MANAGEMENT.info=Permís per gestionar les dades de l'expedient. Permet canviar el valor o afegir-ne de noves.
+permis.estat.DOC_MANAGEMENT.info=Permís per gestionar els documents de l'expedient. Permet canviar el contingut o afegir-ne de nous.
 
 permis.READ.info=Permet a l'usuari tramitador llistar expedients i tasques i accedir a informació dels expedients com la informació bàsica, les dades, documents, cronograma, termini i tasques del propi usuari.
 permis.WRITE.info=Permet a l'usuari tramitador modificar la informació de l'expedient dins de la gestió de l'expedient.
