#1627 Helium sense WF  - Regles

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -861,8 +861,9 @@ enum.regla.qui.TOTHOM=Tothom
 enum.regla.qui.ROL=Rol
 enum.regla.qui.USUARI=Usuari
 enum.regla.que.TOT=Tot
-enum.regla.que.DADES=Dades
-enum.regla.que.DOCUMENTS=Documents
+enum.regla.que.DADES=Totes les dades
+enum.regla.que.DOCUMENTS=Tots els documents
+enum.regla.que.TERMINIS=Tots els terminis
 enum.regla.que.AGRUPACIO=Agrupacio
 enum.regla.que.DADA=Dada
 enum.regla.que.DOCUMENT=Document
@@ -885,7 +886,6 @@ expedient.tipus.exportar.form.definicions.versio=Versió
 expedient.tipus.exportar.form.integracions=Integracions
 expedient.tipus.exportar.form.integracions.sistra=Integració amb SISTRA
 expedient.tipus.exportar.form.integracions.forms=Integració amb formularis externs
-expedient.tipus.exportar.form.integracions=Integracions
 expedient.tipus.exportar.form.enumeracions=Enumeracions
 expedient.tipus.exportar.form.documents=Documents
 expedient.tipus.exportar.form.terminis=Terminis
@@ -1495,6 +1495,9 @@ expedient.tipus.estat.importar.controller.error.codi=No s''ha pogut importar l''
 
 expedient.tipus.estat.exportar.controller.success=Exportació finalitzada correctament
 expedient.tipus.estat.exportar.controller.error=Error durant la exportació de dades: {0}
+
+error.estat.regla.qui.valor=Aquest camp és obligatori per Usuari i Rol
+error.estat.regla.que.valor=Aquest camp és obligatori per Agrupació, Dada, Document i Termini
 
 expedient.tipus.integracio.forms.activar=Activar
 expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis externs
