#1627 Helium sense WF  - Regles

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1478,11 +1478,14 @@ expedient.tipus.estat.llistat.codi.heretat=Estat heretat del tipus d'expedient p
 expedient.tipus.estat.llistat.codi.sobreescriu=Estat que sobreescriu un del tipus d'expedient pare
 expedient.tipus.estat.llistat.accio.permisos=Permisos
 expedient.tipus.estat.llistat.accio.regles=Regles
+expedient.tipus.estat.llistat.seleccionar.ordre=Selecciona l'ordre a assignar
+expedient.tipus.estat.llistat.assignar.ordre=Assigna nou ordre
 
 expedient.tipus.estat.permis.titol=Permisos de l'estat
 
 expedient.tipus.estat.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.estat.validacio.ordre.buit=L'ordre no pot estar buit ni ser menor que 1
+expedient.tipus.estat.validacio.ordre.forat=No es poden deixar forats entre ordres. El valor màxim admés és {0}
 
 expedient.tipus.estat.importar.form.titol=Importar dades d'estats
 expedient.tipus.estat.importar.form.titol.modificar=Modificar estat
@@ -1518,7 +1521,6 @@ expedient.tipus.integracio.tramits.documents=Documents
 expedient.tipus.integracio.tramits.adjunts=Adunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit (SISTRA1)
 expedient.tipus.integracio.tramits.tramitCodi.validacio.NotEmpty=És obligatori especificar el codi del tràmit SISTRA1 si el tipus d'expedien no està integrat amb DISTRIBUCIO i no està integrat amb SISTRA2.
-expedient.tipus.integracio.tramits.notificacions.activar=Activar notificacions
 
 expedient.tipus.integracio.distribucio.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.distribucio.validacio = Errors de validació
@@ -1572,7 +1574,6 @@ expedient.tipus.integracio.pinbal.controller.guardat=Els canvis s'han guardat co
 expedient.tipus.intergracio.pinbal.actiu = Activar integració amb Pinbal
 expedient.tipus.integracio.pinbal.pinbalNifCif = NIF/CIF de la Unitat Organitzativa
 
-expedient.tipus.integracio.distribucio.validacio = Errors de validació
 expedient.tipus.integracio.distribucio.regla.guardat=La regla s'ha creat correctament
 expedient.tipus.integracio.distribucio.regla.error=Error al crear la regla a Distribucio: {0}
 expedient.tipus.integracio.distribucio.regla.unitatOrganica.error=No s'ha trobat la unitat orgànica arrel a les metadades NTI d'aquest tipus d'expedient
