#1627 Helium sense WF  - Importació/exportació estats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1501,6 +1501,7 @@ expedient.tipus.estat.exportar.controller.error=Error durant la exportació de da
 
 error.estat.regla.qui.valor=Aquest camp és obligatori per Usuari i Rol
 error.estat.regla.que.valor=Aquest camp és obligatori per Agrupació, Dada, Document i Termini
+error.estat.regla.nom.repetit=Aquest nom ja existeix
 
 expedient.tipus.integracio.forms.activar=Activar
 expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis externs
