#1625 Mapeig documents i variables en incorporar una anotació a un expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -735,6 +735,9 @@ expedient.anotacio.llistat.columna.dataProcessament=Processada
 expedient.anotacio.llistat.error.annexos=L'anotació conté error amb alguns annexos que poden no haver esat incorporats a l'arxiu.
 expedient.anotacio.llistat.annexos.invalids=L'anotació conté annexos marcats com a invàlids que s'haurien de revisar.
 expedient.anotacio.llistat.annexos.esborranys=L'anotació conté annexos en estat d'esborrany que es podrien perdre si es tanca l'expedient a l'Arxiu.
+expedient.anotacio.llistat.processar.mapeig=Processar mapeig
+expedient.anotacio.llistat.processar.mapeig.ok=L'anotació s'ha reprocessat correctament.
+expedient.anotacio.llistat.processar.mapeig.ko=No s'ha pogut reprocessar l'anotació.
 
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
 expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
@@ -1533,6 +1536,7 @@ expedient.tipus.integracio.tramits.mapeig.llistat.titol.Document=Mapeig de docum
 expedient.tipus.integracio.tramits.mapeig.llistat.titol.Adjunt=Mapeig de documents com adjunts
 expedient.tipus.integracio.tramits.mapeig.llistat.columna.codiHelium=Codi Helium
 expedient.tipus.integracio.tramits.mapeig.llistat.columna.codiSistra=Codi Sistra
+expedient.tipus.integracio.tramits.mapeig.llistat.columna.evitarSobreescriptura=Evitar sobreescriptura
 expedient.tipus.integracio.tramits.mapeig.llistat.accio.crear=Afegir nou mapeig
 expedient.tipus.integracio.tramits.mapeig.llistat.accio.modificar=Modificar
 expedient.tipus.integracio.tramits.mapeig.llistat.accio.esborrar=Esborrar
@@ -1542,6 +1546,8 @@ expedient.tipus.integracio.tramits.mapeig.form.titol.nou=Afegir nou mapeig
 expedient.tipus.integracio.tramits.mapeig.form.titol.modificar=Modificar el mapeig
 expedient.tipus.integracio.tramits.mapeig.form.camp.codiHelium=Codi Helium
 expedient.tipus.integracio.tramits.mapeig.form.camp.codiSistra=Codi Sistra
+expedient.tipus.integracio.tramits.mapeig.form.camp.evitarSobreescriptura=Evitar sobreescriptura
+expedient.tipus.integracio.tramits.mapeig.form.camp.evitarSobreescriptura.comment=Evita sobreescriptura de variables als expedients existents 
 
 expedient.tipus.integracio.tramits.mapeig.validacio=Errors de validació
 expedient.tipus.integracio.tramits.mapeig.validacio.codi.helium.repetit=Ja hi ha un mapeig per aquest codi Helium
