#1627 Helium sense WF  - Pantalla documents

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -316,7 +316,7 @@ expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.reprendre=Reprendre
 expedient.llistat.accio.anular=Anul·lar
 expedient.llistat.accio.activar=Activar
-expedient.llistat.accio.reprendre=Reprendre
+expedient.llistat.accio.modificar=Modificar
 expedient.llistat.accio.esborrar=Esborrar
 expedient.llistat.accio.massiva=Acció massiva
 expedient.llistat.tramitacio.massiva=Tramitació massiva
@@ -333,11 +333,16 @@ expedient.llistat.accio.reassignar.sense.permis=No es té permís de reassignació 
 
 expedient.llistat.consulta_avanzada=Consulta avançada
 
+expedient.llistat.document.confirm_esborrar=Estau segur que voleu esborrar aquest document?
+
 expedient.document.no_disponible=Document no disponible
 expedient.document.signat=Document signat (clic per veure detalls)
+expedient.document.signat.detalls=Visualitza detalls de signatura
 expedient.document.signat.carregant=Carregant certificats
 expedient.document.registrat=Document registrat (clic per veure detalls)
+expedient.document.registrat.detalls=Visualitza detalls de registre
 expedient.document.adjuntat=Adjuntat 
+expedient.document.notificable=Document notificable
 expedient.document.data=Data 
 expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
@@ -355,6 +360,17 @@ expedient.document.form.camp.arxiu=Arxiu
 expedient.document.form.camp.amb.firma=Arxiu amb firma?
 expedient.document.form.camp.tipus.firma=Tipus de firma
 expedient.document.form.camp.firma=Arxiu amb la firma
+expedient.document.previsualitzacio=Previsualització
+expedient.document.previsualitzacio.error=S\\'ha produït un error al carregar el document
+expedient.document.previsualitzacio.warning=Vista prèvia no disponible per a aquest document
+expedient.document.pendent.psigna=Document pendent del portasignatures
+expedient.document.info.nom=Nom
+expedient.document.info.firma=Informació de firma
+expedient.document.info.firma.error=Informació de firma
+expedient.document.camp.firma.responsable.nom=Nom del responsable
+expedient.document.camp.firma.responsable.nif=Nif del responsable
+expedient.document.camp.firma.responsable.data=Data de la signatura
+expedient.document.camp.firma.emissor.certificat=Emissor del certificat
 
 expedient.document.notificar.form.camp.interessats.variable=Interessats
 expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
