--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -336,18 +336,24 @@ expedient.llistat.consulta_avanzada=Consulta avançada
 expedient.llistat.document.confirm_esborrar=Estau segur que voleu esborrar aquest document?
 
 expedient.document.no_disponible=Document no disponible
-expedient.document.signat=Document signat (clic per veure detalls)
+expedient.document.signat=Document signat
 expedient.document.signat.detalls=Visualitza detalls de signatura
 expedient.document.signat.carregant=Carregant certificats
-expedient.document.registrat=Document registrat (clic per veure detalls)
+expedient.document.registrat=Document registrat
 expedient.document.registrat.detalls=Visualitza detalls de registre
+expedient.document.info.etiqueta.nti.detall=Visualitza informació NTI del document
+expedient.document.info.anotacio.detall=Visualitza la anotació del document
+expedient.document.psigna.reintentar=Visualitza informació de portasignatures del document
 expedient.document.adjuntat=Adjuntat 
 expedient.document.notificable=Document notificable
+expedient.document.notificat=Document notificat
 expedient.document.data=Data 
 expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
 expedient.document.info.etiqueta.anotacio=AN
+expedient.document.info.etiqueta.psigna=PS
+expedient.document.info.psigna=Document pendent del portasignatures
 expedient.document.info.etiqueta.anotacio.title=Document annex de l''anotació {0}
 expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
 expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
