--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -880,6 +880,22 @@ expedient.tipus.estat.controller.regla.creat=Regla creada
 expedient.tipus.estat.controller.regla.modificat=Regla modificada
 
 expedient.tipus.estat.accions.titol=Accions d''entrada i sortida de l''estat: {0} - {1}
+expedient.tipus.estat.accions.entrada.legend=Accions a executar a l' entrada de l'estat
+expedient.tipus.estat.accions.llistat.columna.ordre=Ordre
+expedient.tipus.estat.accions.llistat.columna.accio=Acció
+expedient.tipus.estat.accions.llistat.columna.tipus=Tipus
+expedient.tipus.estat.accions.llistat.accio.afegir=Afegir
+expedient.tipus.estat.accions.llistat.accio.esborrar=Esborrar
+expedient.tipus.estat.accions.llistat.accio.esborrar.confirmacio=Estau segur que voleu esborrar aquesta acció de la llista?
+
+expedient.tipus.estat.accions.sortida.legend=Accions a executar a la sortida de l'estat
+
+
+expedient.tipus.estat.controller.accio.entrada.afegir.correcte=Acció afegida correctament a l''entrada de l'estat
+expedient.tipus.estat.controller.accio.entrada.esborrar.correcte=Acció esborrada correctament de l''entrada de l'estat
+expedient.tipus.estat.controller.accio.afegir.error=S''ha produit un error inesperat afegint l'acció a l'estat: {0}
+expedient.tipus.estat.controller.accio.esborrar.error=S''ha produit un error inesperat esborrant l'acció a l'estat: {0}
+
 
 enum.regla.qui.TOTHOM=Tothom
 enum.regla.qui.ROL=Rol
