#1627 Helium sense WF - Pantalla documents

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -485,6 +485,10 @@ expedient.info.camp.titol=Títol
 expedient.info.camp.tipus=Tipus
 expedient.info.camp.registre.numero=Número de registre
 expedient.info.camp.registre.data=Data de registre
+expedient.info.camp.registre.oficina=Oficina de registre
+expedient.info.camp.registre.tipus=Tipus de registre
+expedient.info.camp.registre.tipus.entrada=Entrada
+expedient.info.camp.registre.tipus.sortida=Sortida
 expedient.info.camp.data.inici=Iniciat el
 expedient.info.camp.tramit.origen=Tràmit d'origen
 expedient.info.iniciat.per=Iniciat per
